添加罗马数字转化，最大容量

--- a/leetcode-group0/pom.xml
+++ b/leetcode-group0/pom.xml
@@ -9,5 +9,6 @@
   <packaging>pom</packaging>
   <modules>
   	<module>leetcode-group0-1-sum</module>
+      <module>leetcode-group0-2</module>
   </modules>
 </project>
