--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,6 @@
 
 	<modules>
 		<module>leetcode-group0</module>
-	</modules>
+        <module>leetcode-group1</module>
+    </modules>
 </project>
