报数，查询插入的位置

--- a/leetcode-group0/pom.xml
+++ b/leetcode-group0/pom.xml
@@ -11,5 +11,6 @@
   	<module>leetcode-group0-1-sum</module>
       <module>leetcode-group0-2</module>
       <module>leetcode-group0-3</module>
+      <module>leetcode-group0-4</module>
   </modules>
 </project>
