--- a/leetcode-group0/pom.xml
+++ b/leetcode-group0/pom.xml
@@ -12,5 +12,6 @@
       <module>leetcode-group0-2</module>
       <module>leetcode-group0-3</module>
       <module>leetcode-group0-4</module>
+      <module>leetcode-group0-5</module>
   </modules>
 </project>
