--- a/leetcode-group0/pom.xml
+++ b/leetcode-group0/pom.xml
@@ -13,5 +13,6 @@
       <module>leetcode-group0-3</module>
       <module>leetcode-group0-4</module>
       <module>leetcode-group0-5</module>
+      <module>leetcode-group0-6</module>
   </modules>
 </project>
