--- a/leetcode-group0/pom.xml
+++ b/leetcode-group0/pom.xml
@@ -14,5 +14,9 @@
       <module>leetcode-group0-4</module>
       <module>leetcode-group0-5</module>
       <module>leetcode-group0-6</module>
+      <module>leetcode-group0-7</module>
+      <module>leetcode-group0-8</module>
+      <module>leetcode-group0-9</module>
+      <module>leetcode-group0-0</module>
   </modules>
 </project>
