--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,7 @@
         <module>leetcode-group2</module>
         <module>leetcode-group5</module>
         <module>leetcode-group4</module>
+        <module>leetcode-group6</module>
+        <module>leetcode-group7</module>
     </modules>
 </project>
