二叉树查找删除节点，添加节点，组合

--- a/leetcode-group1/pom.xml
+++ b/leetcode-group1/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>leetcode-group1-7</module>
         <module>leetcode-group1-0</module>
+        <module>leetcode-group1-4</module>
     </modules>
 
     <parent>
