--- a/leetcode-group2/leetcode-group2-7/pom.xml
+++ b/leetcode-group2/leetcode-group2-7/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>jeetcode</artifactId>
+        <artifactId>leetcode-group2</artifactId>
         <groupId>com.michael</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>leetcode-group2</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>leetcode-group2-3</module>
-        <module>leetcode-group2-7</module>
-        <module>leetcode-group2-8</module>
-    </modules>
+    <artifactId>leetcode-group2-7</artifactId>
 
 
 </project>
