旋转数组查找

--- a/leetcode-group1/pom.xml
+++ b/leetcode-group1/pom.xml
@@ -8,6 +8,7 @@
         <module>leetcode-group1-0</module>
         <module>leetcode-group1-4</module>
         <module>leetcode-group1-6</module>
+        <module>leetcode-group1-5</module>
     </modules>
 
     <parent>
