--- a/leetcode-group2/pom.xml
+++ b/leetcode-group2/pom.xml
@@ -16,6 +16,7 @@
         <module>leetcode-group2-7</module>
         <module>leetcode-group2-8</module>
         <module>leetcode-group2-0</module>
+        <module>leetcode-group2-1</module>
     </modules>
 
 
