--- a/leetcode-group1/pom.xml
+++ b/leetcode-group1/pom.xml
@@ -9,6 +9,7 @@
         <module>leetcode-group1-4</module>
         <module>leetcode-group1-6</module>
         <module>leetcode-group1-5</module>
+        <module>leetcode-group1-8</module>
     </modules>
 
     <parent>
