--- a/leetcode-group1/pom.xml
+++ b/leetcode-group1/pom.xml
@@ -10,6 +10,7 @@
         <module>leetcode-group1-6</module>
         <module>leetcode-group1-5</module>
         <module>leetcode-group1-8</module>
+        <module>leetcode-group1-1</module>
     </modules>
 
     <parent>
