--- a/leetcode-group3/leetcode-group3-2/pom.xml
+++ b/leetcode-group3/leetcode-group3-2/pom.xml
@@ -3,21 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>jeetcode</artifactId>
+        <artifactId>leetcode-group3</artifactId>
         <groupId>com.michael</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>leetcode-group3</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>leetcode-group3-4</module>
-        <module>leetcode-group3-0</module>
-        <module>leetcode-group3-7</module>
-        <module>leetcode-group3-8</module>
-        <module>leetcode-group3-2</module>
-    </modules>
+    <artifactId>leetcode-group3-2</artifactId>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
 </project>
