--- a/leetcode-group6/pom.xml
+++ b/leetcode-group6/pom.xml
@@ -18,6 +18,7 @@
         <module>leetcode-group6-9</module>
         <module>leetcode-group6-5</module>
         <module>leetcode-group6-6</module>
+        <module>leetcode-group6-2</module>
     </modules>
 
 
