--- a/leetcode-group6/pom.xml
+++ b/leetcode-group6/pom.xml
@@ -19,6 +19,7 @@
         <module>leetcode-group6-5</module>
         <module>leetcode-group6-6</module>
         <module>leetcode-group6-2</module>
+        <module>leetcode-group6-0</module>
     </modules>
 
 
