--- a/leetcode-group12/pom.xml
+++ b/leetcode-group12/pom.xml
@@ -9,12 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>leetcode-group16</artifactId>
+    <artifactId>leetcode-group12</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>leetcode-group16-6</module>
-        <module>leetcode-group-7</module>
+        <module>leetcode-group12-7</module>
     </modules>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
 </project>
