--- a/leetcode-group1/pom.xml
+++ b/leetcode-group1/pom.xml
@@ -11,6 +11,7 @@
         <module>leetcode-group1-5</module>
         <module>leetcode-group1-8</module>
         <module>leetcode-group1-1</module>
+        <module>leetcode-group1-2</module>
     </modules>
 
     <parent>
